k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: po-generator
  labels:
    app.kubernetes.io/name: po-generator
    app.kubernetes.io/component: frontend
spec:
  # NodePort lets you access the app via minikube ip + nodePort
  # Switch to LoadBalancer for cloud (GKE / EKS / AKS)
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080   # Access at: http://$(minikube ip):30080
